--- a/Exercise 5/static/styles/style.css
+++ b/Exercise 5/static/styles/style.css
@@ -1,4 +1,3 @@
-
 html,
 body,
 div,
@@ -72,6 +71,66 @@ video {
     padding: 0;
     border: 0;
 }
+
 body {
     font-size: 100%;
+    color: rgba(255, 255, 255, 0.5);
+    font-family: 'Arial', sans-serif;
+    letter-spacing: .5px;
+    font-weight: 100;
 }
+
+h1, h2, h3, h4 {
+	color: black;
+}
+
+a {
+	text-decoration: none;
+	color: rgba(255, 255, 255, 0.85);
+}
+
+ul {
+	list-style: none;
+}
+
+/*************/
+/**** NAV ****/
+/*************/
+
+#nav ul {
+	display: flex;
+	flex-direction: row;
+}
+
+#nav ul li {
+	width: 50%;
+	background-color: rgba(50,60,75,1);
+	text-align: center;
+	padding: 15px 0;
+}
+
+#nav ul li:first-of-type {
+	border-right: 1px solid rgba(255, 255, 255, 0.15);
+}
+
+/*************/
+/** CLASSES **/
+/*************/
+
+.content {
+	display: none;
+}
+
+.content.show {
+	display: block;
+}
+
+
+
+
+
+
+
+
+
+
