--- a/Exercise 5/static/styles/style.css
+++ b/Exercise 5/static/styles/style.css
@@ -117,15 +117,13 @@ ul {
 /** CLASSES **/
 /*************/
 
-.content {
+main > section {
 	display: none;
 }
 
-.content.show {
+.active {
 	display: block;
 }
-
-
 
 
 
