--- a/week-2/exercise-4/static/css/style.css
+++ b/week-2/exercise-4/static/css/style.css
@@ -11,6 +11,9 @@ body {
     font-weight: 100;
     background-color: #F7F7F7;
     color: #4b4f54;
+    width: vmax;
+    height: vmax;
+    position: relative;
 }
 
 h2 {
@@ -174,6 +177,14 @@ ul[role='photoFeed'] img {
 	opacity: 1;
 }
 
+.visible {
+	opacity: 1;
+}
+
+.unvisible {
+	opacity: 0;
+}
+
 /********/
 /* FORM */
 /********/
@@ -279,6 +290,21 @@ form div:hover svg path {
 		margin-top: 0px;
 	}
 }
+
+.spinner {
+	background-color: white;
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	display: none;
+}
+
+.spinning {
+	display: block;
+}
+
 
 
 
