--- a/week-2/exercise-4/static/css/style.css
+++ b/week-2/exercise-4/static/css/style.css
@@ -33,7 +33,7 @@ ul {
 }
 
 main {
-	padding-top: 3em;
+	padding-top: 5em;
 }
 
 /**************/
@@ -61,6 +61,10 @@ nav[role='navigation'] li  {
     width: 50%;
     display: block;
     text-align: center;
+}
+
+nav[role='navigation'] li:hover  {
+    cursor: pointer;
 }
 
 nav[role='navigation'] a  {
@@ -146,6 +150,7 @@ ul[role='photoFeed'] li {
     width: 25%;
     box-sizing: border-box;
     justify-content: space-around;
+    padding: 1em 0;
 }
 
 ul[role='photoFeed'] li a {
@@ -326,6 +331,11 @@ form div:hover svg path {
 .spinning {
 	display: block;
 }
+
+.fixedNav {
+	box-shadow: 0px 0px 1em #000000;
+}
+
 
 
 
