--- a/week-2/exercise-4/static/css/style.css
+++ b/week-2/exercise-4/static/css/style.css
@@ -33,7 +33,11 @@ ul {
 }
 
 main {
-	padding-top: 5em;
+	padding-top: 2em;
+}
+
+#popularMedia {
+	padding-top: 2em;
 }
 
 /**************/
@@ -304,6 +308,9 @@ form div:hover svg path {
 	#userHeader img {
 		margin-top: 0px;
 	}
+	.likes {
+		bottom: 13em;
+	}
 }
 
 /**********/
@@ -336,7 +343,26 @@ form div:hover svg path {
 	box-shadow: 0px 0px 1em #000000;
 }
 
+#searchPhotos .inner {
+	opacity: 0;
+	transition: all 3s ease;
+	-webkit-transition: all 3s ease;
+}
 
+#searchPhotos.active .inner {
+	opacity: 1;
+}
+
+.searchedTag {
+	margin: auto;
+    font-size: 1.5em;
+    color: #3CBEB2;
+    display: none;
+}
+
+.searchedTag:first-of-type {
+	display: block;
+}
 
 
 
