--- a/week-2/exercise-4/static/css/style.css
+++ b/week-2/exercise-4/static/css/style.css
@@ -343,15 +343,15 @@ form div:hover svg path {
 	box-shadow: 0px 0px 1em #000000;
 }
 
-#searchPhotos .inner {
-	opacity: 0;
-	transition: all 3s ease;
-	-webkit-transition: all 3s ease;
-}
+// #searchPhotos .inner {
+// 	opacity: 0;
+// 	transition: all 3s ease;
+// 	-webkit-transition: all 3s ease;
+// }
 
-#searchPhotos.active .inner {
-	opacity: 1;
-}
+// #searchPhotos.active .inner {
+// 	opacity: 1;
+// }
 
 .searchedTag {
 	margin: auto;
