--- a/week-2/exercise-4/static/css/style.css
+++ b/week-2/exercise-4/static/css/style.css
@@ -343,16 +343,6 @@ form div:hover svg path {
 	box-shadow: 0px 0px 1em #000000;
 }
 
-// #searchPhotos .inner {
-// 	opacity: 0;
-// 	transition: all 3s ease;
-// 	-webkit-transition: all 3s ease;
-// }
-
-// #searchPhotos.active .inner {
-// 	opacity: 1;
-// }
-
 .searchedTag {
 	margin: auto;
     font-size: 1.5em;
@@ -364,5 +354,26 @@ form div:hover svg path {
 	display: block;
 }
 
+#description {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
 
+#description .inner {
+	top: 30%;
+	left: 50%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	text-align: center;
+}
 
+#description img {
+	width: 20em;
+	margin: auto;
+	display: block;
+}
+
+#description span {
+	display: block;
+}
